<resources>
    <string name="app_name">RemakeHealtyLife</string>
    <string name="healty_name">Nama Kesehatan</string>
    <string name="nama_sehat">Nama Healty</string>
    <string name="detail">Detail</string>
    <string name="about_me">About Me</string>
    <string name="putra_agta_permadi">Putra Agta Permadi</string>
    <string name="email">E-mail Dicoding to Bangkit 2023 : a110dkx4948@bangkit.academy</string>
    <string name="image">Image</string>
    <string name="specs_mahasiswa">Putra Agta Permadi</string>
    <string name="specs_tujuan">Aplikasi ini dibuat untuk memenuhi\n
    salah satu tugas Subimission Dicoding\n
    Belajar Membuat Aplikasi Android Untuk Pemula</string>
    <string name="specs_jurusan">S1 Teknik Informatika</string>
    <string name="mahasiswa">Nama Mahasiswa : </string>
    <string name="tujuan">Tujuan membuat ini : </string>
    <string name="jurusan">Fakultas :</string>
    <string name="spesifikasi">Spesifikasi :</string>
    <string name="healty_life_app_name">HEALTY LIFE</string>
    <string name="name_motto">Masa Depan yang Lebih Sehat, Satu Senyum Sekaligus</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Lupa Password ?</string>
    <string name="register">Register</string>
    <string name="btn_register">Register</string>
    <string name="btn_forgot_password">Send Email</string>
    <string name="register_title">Register</string>
    <string name="punya_akun">Udah punya akun ? Sign in</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="searchbar_hint">Masukkan kata</string>
</resources>